[package]
name = "card-movement-simulator"
version = "0.7.1"
authors = [
  "Horizon Blockchain Games Inc.",
  "William Hua <william@attente.ca>",
  "Ari Lotter <me@arilotter.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arcadeum = { git = "ssh://git@github.com/horizon-games/arcadeum-state.git", tag = "0.18.0" }
indexmap = { version = "^1.4", features = ["serde-1"] }
rand = "0.8"
serde = "1.0"
serde_cbor = "0.11"
thiserror = "1.0"
typescript-definitions = { git = "https://github.com/arilotter/typescript-definitions.git", optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }

[build-dependencies]
inflections = "1"

[dev-dependencies]
pretty_assertions = "0.7"

[features]
default = ["std"]
bindings = ["typescript-definitions", "wasm-bindgen"]
reveal-backtrace = []
event-eq = []
std = ["arcadeum/std"]
no-crypto = ["arcadeum/no-crypto"]
